# clientes_drf_api

./: .requirements.txt  api-cliente-chaves.pem  api-clientes-chaves.pem  populate_script.py  pyproject.toml  requirements.txt
clientes/: admin.py  serializers.py  validators.py
setup/: settings.py
