[tool.poetry]
name = "drf-clientes-api"
version = "0.1.0"
description = ""
authors = ["sabrina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
djangorestframework = "^3.14.0"
django-filter = "^23.5"


[tool.poetry.group.dev.dependencies]
annotated-types = "0.6.0"
anyio = "4.3.0"
certifi = "2024.2.2"
distro = "1.9.0"
h11 = "0.14.0"
httpcore = "1.0.4"
httpx = "0.27.0"
idna = "3.6"
openai = "1.12.0"
pydantic = "2.6.1"
pydantic-core = "2.16.2"
sniffio = "1.3.0"
tqdm = "4.66.2"
typing-extensions = "4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
